[tool.poetry]
name = "graph-embedding-demo"
version = "0.1.0"
description = ""
authors = ["Alexander Buyantuev <alexbuyan.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
karateclub = "^1.3.3"
networkx = "2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
